--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 axum = "0.8"
 tokio = {version = "1", features = ["full"]}
+serde = {version = "1", features = ["derive"]}
+serde_json = "1"
 
 [dev-dependencies]
 anyhow = "1"
