--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8"
 tokio = {version = "1", features = ["full"]}
+# Serde / json
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
+#Axum
+axum = "0.8"
+tower-http = {version = "0.6", features = ["fs"]}
+
 
 [dev-dependencies]
 anyhow = "1"
