--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde_json = "1"
 #Axum
 axum = "0.8"
 tower-http = {version = "0.6", features = ["fs"]}
+tower-cookies= "0.11"
 
 
 [dev-dependencies]
