--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde_json = "1"
 axum = "0.8"
 tower-http = {version = "0.6", features = ["fs"]}
 tower-cookies= "0.11"
+# Others
+lazy-regex="3"
 
 
 [dev-dependencies]
